Changes for 1.9
---------------
- Added noident/nodns/server flags to port blocks
- Added "P" (primary o-line) flag to oper blocks
- Changed stats o output to be in human-readable format

- Reworked services special-casing:
    - shortform commands (NS/CS/etc) always sent between normal servers,
      translated to long forms for super servers
    - in SERVICESHUB mode:
        - shortforms sent to Services_Name
        - AWAY never sent to Services_Name
        - TOPIC in initial netburst not sent to Services_Name or Stats_Name
        - GOPER/GNOTICE/GLOBOPS/CHATOPS never sent to super servers
        - channel PRIVMSG/NOTICE never sent to super servers

- Server protocol changes:
    Added CHANKILL <channel> [reason]
      completely destroys a channel and related state


Changes for 1.8.4
-----------------
- Fixed recursive server removal for non-NOQUIT links
- Fixed TS desync during nick changes
- Fixed RWHO reporting wrong channel member flags
- Fixed RWHO limit handling during clone searches
- Fixed mangled SET LCLONES reply
- Fixed CTCP flud trips on CTCP ACTIONs (from scatterbrain)
- Fixed cmode +j 0 sync bug (again)
- Fixed crash when conf file doesn't exist on rehash
- Fixed conf include directive parsing
- Fixed non-hubs trying to autoconnect to multiple servers
- Fixed incorrect (R)WHO +t description in help
- Fixed motd timestamp handling (from scatterbrain)
- Fixed duplicate link reporting for Ulined servers
- Fixed numeric 338 colon placement
- Fixed trailing spaces added to AWAY messages
- Fixed channel modes not showing both +s and +p
- Fixed a race condition that could lead to crashes under flood load
- Fixed WHO incorrectly handling CIDR searches
- Fixed crash during bad server introductions
- Fixed an obscure bug with remotely targeted commands and local clients
  (from toucan)
- Fixed misc conf parsing issues (from GeniusDex)
- Fixed unknown connection reporting in LUSERS
- Fixed LIST C> not working at all