@@ -61,6 +61,7 @@ extern void reset_sock_opts();
 extern int send_lusers(aClient *,aClient *,int, char **);
 #endif
 extern int server_was_split;
+extern int svspanic;
 
 static char buf[BUFSIZE], buf2[BUFSIZE];
 int  user_modes[] =
@@ -293,6 +294,13 @@ hunt_server(aClient *cptr, aClient *sptr, char *command, int server,
         return HUNTED_NOSUCH;
     }
 #endif
+
+    if(svspanic && MyClient(sptr) && !IsAnOper(sptr) && IsULine(acptr))
+    {
+        sendto_one(sptr, err_str(ERR_SERVICESDOWN), me.name, parv[0],
+                   acptr->name);
+        return HUNTED_NOSUCH;
+    }
 
     if (MyClient(acptr))
         return HUNTED_ISME;
@@ -913,7 +921,7 @@ register_user(aClient *cptr, aClient *sptr, char *nick, char *username)
         /* if the I:line doesn't have a password and the user does
          * send it over to NickServ
          */
-        if (sptr->passwd[0] && aliastab[AII_NS].client)
+        if (sptr->passwd[0] && aliastab[AII_NS].client && !svspanic)
             sendto_alias(&aliastab[AII_NS], sptr, "SIDENTIFY %s",sptr->passwd);
 
         memset(sptr->passwd, '\0', PASSWDLEN);
@@ -1438,7 +1446,7 @@ m_message(aClient *cptr, aClient *sptr, int parc, char *parv[], int notice)
                 if (chflags & CHFL_CHANOP)
                     *--s = '@';
 
-                sendto_channelflags_butone(cptr, sptr, chptr, chflags,
+                sendto_channelflags_butone(cptr, sptr, chptr, chflags|CHFL_CHANOP,
                                            ":%s %s %s :%s", parv[0], cmd, s,
                                            parv[2]);
             }
@@ -1538,7 +1546,12 @@ m_message(aClient *cptr, aClient *sptr, int parc, char *parv[], int notice)
                     continue;
                 }
 #endif
-
+                if(svspanic && !IsOper(sptr))
+                {
+                    sendto_one(sptr, err_str(ERR_SERVICESDOWN), me.name, parv[0],
+                               ai->nick);
+                    continue;
+                }
 #ifdef PASS_SERVICES_MSGS
                 if (s)  /* if passing, skip this and use generic send below */
 #endif
@@ -2673,11 +2686,6 @@ m_userip(aClient *cptr, aClient *sptr, int parc, char *parv[])
     aClient *acptr;
     int i, len, res = 0;
 
-    if(!IsAnOper(sptr))
-    {
-        sendto_one(sptr, err_str(ERR_NOPRIVILEGES), me.name, parv[0]);
-        return 0;
-    }
     ircsprintf(buf, rpl_str(RPL_USERHOST), me.name, parv[0]);
     len = strlen(buf);
 
